# GameBench

./: .gitignore  CLAUDE.md  ISSUE_TRAINING_STALL.md  LICENSE  README.md  pyproject.toml
artifacts/: test_run_2026-02-09.md  training_codebase_issues_2026-02-16.md
benchmark_results/: claude_code_results.json  codex_cli_results.json  gemini_cli_results.json
checkpoints/: calibration.json
configs/: agentic_benchmark.yaml  api_server.yaml  benchmark.yaml  generation.yaml  training.yaml  training_improved.yaml
davechess/: __init__.py
davechess/benchmark/: __init__.py  agent_harness.py  agentic_protocol.py  evaluator.py  game_library.py  game_manager.py  llm_interface.py  prompt.py  (+7 more)
docs/: benchmark_agent_guide.md  index.html
scripts/: _launch_codex_benchmark.py  _launch_gemini_benchmark.py  _play_benchmark.py  agent_cli.py  analyze_games.py  analyze_seed_games.py  calibrate_elo.py  calibrate_opponents.py  chess_mctslite_elo.py  compare_models.py  download_artifacts.py  endgame_analysis.py  generate_and_save_seeds.py  generate_games.py  generate_smart_seeds.py  play.py  post_update.py  prepare_benchmark.py  project_elo.py  quick_balance_check.py  run_agentic_benchmark.py  run_api_server.py  run_benchmark.py  run_overnight_benchmark.sh  test_commander_hunter.py  train.py  train_improved.py  validate_game.py
tests/: conftest.py  test_agentic_benchmark.py  test_api_endpoints.py  test_api_session.py  test_benchmark.py  test_board_flipping.py  test_game.py  test_mcts.py  test_network.py  test_regularization.py  test_sdk.py  test_validation.py
wandb/: latest-run
(+43 files in other folders)
